--- a/.prettierrc
+++ b/.prettierrc
@@ -1,4 +1,8 @@
 {
   "trailingComma": "all",
-  "singleQuote": false
+  "singleQuote": false,
+  "tabWidth": 2,
+  "useTabs": false,
+  "tailwindConfig": "./tailwind.config.js",
+  "plugins": ["prettier-plugin-tailwindcss"]
 }
