--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -27,10 +27,13 @@ jobs:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
     - run: npm ci
-    - run: npm run build --if-present
+    # - run: npm run build --if-present
     # - run: npm test
-    - run: git config user.name github-actions
-    - run: git config user.email github-actions@github.com
-    - run: git --work-tree build add --all
-    - run: git commit -m "Automatic Build and Deploy run by GitHub Actions"
-    - run: git push origin HEAD:gh-pages --force
+    # - run: git config user.name github-actions
+    # - run: git config user.email github-actions@github.com
+    # - run: git --work-tree build add --all
+    # - run: git commit -m "Automatic Build and Deploy run by GitHub Actions"
+    # - run: git push origin HEAD:gh-pages --force
+    - name: Build and Deploy React app to GitHub Pages
+      uses: omkartapale/react-deployment-gh-pages@v1.0.0
+
