chore: change github pages build branch

--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -5,7 +5,7 @@ name: Build and Deploy React app to GitHub Pages
 
 on:
   push:
-    branches: [ "main" ]
+    branches: [ "publish-gh-pages" ]
   workflow_dispatch:
 
 jobs:
